5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1593_588.log
== SUBMITION (2019-03-28 11:22:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))

n100 = valor//100
resto n100 = valor % 100

n50 = resto n100//50
resto n50 = resto n100 %50

n10 = resto n50//10

print(n100)
print(n50)
print(n10)



-- EXECUTION TIME:
0.154919
-- ERROR:
  File "/home/codebench/codes/1593/588/main.py", line 7
    resto n100 = valor % 100
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:22:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))

n100 = valor//100
resto n100 = valor % 100

n50 = resto n100//50
resto n50 = resto n100 %50

n10 = resto n50//10

print(n100)
print(n50)
print(n10)



-- ERROR:
File "XXXX", line 7
    resto n100 = valor % 100
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:22:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))

n100 = valor//100
resto_n100 = valor % 100

n50 = resto n100//50
resto_n50 = resto n100 %50

n10 = resto n50//10

print(n100)
print(n50)
print(n10)



-- EXECUTION TIME:
0.16098
-- ERROR:
  File "/home/codebench/codes/1593/588/main.py", line 9
    n50 = resto n100//50
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:23:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100

n50 = resto n100//50
resto_n50 = resto n100 %50

n10 = resto n50//10

print(n100)
print(n50)
print(n10)



-- EXECUTION TIME:
0.138786
-- ERROR:
  File "/home/codebench/codes/1593/588/main.py", line 8
    n50 = resto n100//50
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:23:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100

n50 = resto n100//50
resto_n50 = resto n100 %50

n10 = resto n50//10

print(n100)
print(n50)
print(n10)



-- ERROR:
File "XXXX", line 8
    n50 = resto n100//50
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:23:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100
n50 = resto n100//50
resto_n50 = resto n100 %50
n10 = resto n50//10

print(n100)
print(n50)
print(n10)



-- ERROR:
File "XXXX", line 7
    n50 = resto n100//50
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:23:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100
n50 = resto_n100//50
resto_n50 = resto n100 %50
n10 = resto_n50//10

print(n100)
print(n50)
print(n10)



-- EXECUTION TIME:
0.1849
-- ERROR:
  File "/home/codebench/codes/1593/588/main.py", line 8
    resto_n50 = resto n100 %50
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:24:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100
n50 = resto_n100//50
resto_n50 = resto n100 %50
n10 = resto_n50//10

print(n100)
print(n50)
print(n10)



-- ERROR:
File "XXXX", line 8
    resto_n50 = resto n100 %50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:24:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100
n50 = resto_n100//50
resto_n50 = resto_n100 %50
n10 = resto_n50//10

print(n100)
print(n50)
print(n10)



-- OUTPUT:
9.0
1.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:24:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100
n50 = resto_n100//50
resto_n50 = resto_n100 %50
n10 = resto_n50//10

print(n100)
print(n50)
print(n10)



-- EXECUTION TIME:
0.16179
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9.0
1.0
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:24:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100
n50 = resto_n100//50
resto_n50 = resto_n100 %50
n10 = resto_n50//10

print(n100)
print(n50)
print(n10)



-- EXECUTION TIME:
0.144798
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9.0
1.0
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:24:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = float(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100
n50 = resto_n100//50
resto_n50 = resto_n100 %50
n10 = resto_n50//10

print(n100)
print(n50)
print(n10)



-- OUTPUT:
9.0
1.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:25:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("insira a quantia:"))
n100 = valor//100
resto_n100 = valor % 100
n50 = resto_n100//50
resto_n50 = resto_n100 %50
n10 = resto_n50//10

print(n100)
print(n50)
print(n10)



-- EXECUTION TIME:
0.155785
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:12:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("insira a quantia:"))


print(n100)
print(n50)
print(n10)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(n100)
NameError: name 'n100' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:13:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("insira a quantia:"))
n100 = valor//100
print(n100)


-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:14:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("insira a quantia:"))
n100 = valor//100
resto100 = valor%100
print(resto100)
print(n100)


-- OUTPUT:
90
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:16:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("insira a quantia:"))
n100 = valor//100
resto100 = valor%100

n50 = resto100//50
resto50 = resto100%50

n10 = resto50//10

print(n100)
print(n50)
print(n10)


-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
